# rosneuro_filters_laplacian

./: CMakeLists.txt  README.md  package.xml  plugins_rosneuro_filters_laplacian.xml
example/: laplacian_simloop.launch  laplacian_simloop_config.cpp  laplacian_simloop_config.launch
include/rosneuro_filters_laplacian/: Laplacian.h  Laplacian.hpp
src/: Laplacian.cpp
test/: TestLaplacian.cpp  laplacian_simloop.cpp  test_laplacian.cpp
