<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_filters_laplacian</name>
  <version>1.0.0</version>
  <description>ROSNeuro Laplacian filter package</description>
  <author email="luca.tonin@unipd.it">Luca Tonin</author>
  <maintainer email="luca.tonin@unipd.it">Luca Tonin</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>

  <depend>rosneuro_filters</depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>eigen</depend>
  <depend>roslib</depend>
  <build_depend>pluginlib</build_depend>
  <exec_depend>pluginlib</exec_depend>
  
  <export>
    <rosneuro_filters plugin="${prefix}/plugins_rosneuro_filters_laplacian.xml" />
  </export>

</package>
